@@ -6,6 +6,8 @@ cod-tools (unreleased)
       - the '--record-original-order', '--order-child-loops' options;
       - support for ordering according to values of '_atom_type_*' CIF
         loop.
+    - cif_CODify:
+      - an error message regarding the mandatory input CIF file.
     - COD::CIF::Data::CODFlags:
       - the has_attached_hydrogens() subroutine.
     - COD::CIF::DDL::DDLm:
@@ -23,6 +25,8 @@ cod-tools (unreleased)
     - COD::ToolsVersion
       - the $COD::ToolsVersion::Version package variable.
   * Fixed:
+    - cif_CODify:
+      - corrected the usage example.
     - cif_diff:
       - numerically compared values with standard uncertainties are
         unpacked before the comparison.
